# full-stack-todo-app

./: .gitignore  CLAUDE.md  package-lock.json  package.json
.claude/agents/: backend-auth-guardian.md  frontend-spec-implementer.md  spec-authority.md
.claude/skills/api-contract-enforcement/: SKILL.md
.claude/skills/spec-validation/: SKILL.md
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  debug_login.py  debug_output.txt  main.py  migrate_add_title.py  persistence_trace.txt  pyproject.toml  reproduce_issue.py  requirements.txt  todo.db  trace.txt  trace_create.txt
backend/modules/api/: dependencies.py
backend/src/: main.py
backend/src/api/: auth.py  chat.py  conversations.py  tasks.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/core/: config.py  database.py  middleware.py  security.py
backend/src/mcp/: server.py  task_operations.py  tools.py
backend/src/models/: conversation.py  message.py  task.py  user.py
backend/src/services/: chat_service.py
backend/tests/: conftest.py  test_auth.py  test_persistence.py  test_routing.py  test_tasks.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/tests/: auth.test.tsx  persistence.test.tsx  tasks.test.tsx
specs/001-task-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
todo-backend/tests/: conftest.py
(+80 files in other folders)
